--- a/client/src/users/pages/UserProfile.css
+++ b/client/src/users/pages/UserProfile.css
@@ -161,7 +161,10 @@
   }
 }
 .slick-slide div .list__events-item.card.event_slider-item.profile{
-  margin: 20px;
+  margin: 20px auto;
+}
+.profile-title+.slick-slider .slick-slide{
+  width: 400px !important;
 }
 @media (max-width: 470px) {
   .event_date {
