--- a/client/src/events/components/search.css
+++ b/client/src/events/components/search.css
@@ -25,8 +25,8 @@
 }
 
 .form__search_event button::before {
-  content: "\f002";
-  font-family: "icomoon";
+  content: '\f002';
+  font-family: 'icomoon';
 }
 .header__search {
   min-width: 300px;
@@ -38,6 +38,6 @@
 }
 
 .header__submit::before {
-  content: "\f002";
-  font-family: "icomoon";
+  content: '\f002';
+  font-family: 'icomoon';
 }
