--- a/client/src/events/components/EventItem.css
+++ b/client/src/events/components/EventItem.css
@@ -26,11 +26,16 @@
 }
 
 .event-item__img {
+  position: relative;
   width: 100%;
   object-fit: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.countdown-item {
+  position: absolute;
 }
 
 .map-container {
@@ -42,6 +47,9 @@
 }
 
 .event-item__img figure {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-block-start: 0em;
   margin-block-end: 0em;
   margin-inline-start: 0px;
