--- a/client/src/events/components/EventItem.css
+++ b/client/src/events/components/EventItem.css
@@ -65,3 +65,9 @@
 .event-item__owner {
   padding: 20px 0px;
 }
+
+@media only screen and (min-width: 1200px) {
+  .row__description {
+    margin-top: 5%;
+  }
+}
