--- a/client/src/shared/components/UI/CountDownTimer.css
+++ b/client/src/shared/components/UI/CountDownTimer.css
@@ -12,7 +12,7 @@ h1 {
   left: 15%;
   width: 70%;
   z-index: 999;
-  background-color: rgba(94, 165, 155, 0.527);
+  background-color: #16a0848a;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +21,7 @@ h1 {
 
 @media only screen and (max-width: 1200px) {
   .countdown-wrapper {
-    top: 75%;
+    top: 70%;
     left: 15%;
     width: 70%;
   }
@@ -33,7 +33,7 @@ h1 {
 
 @media only screen and (max-width: 992px) {
   .countdown-wrapper {
-    top: 40%;
+    top: 36%;
     left: 25%;
     width: 50%;
   }
@@ -46,9 +46,9 @@ h1 {
 @media only screen and (max-width: 768px) {
   .countdown-wrapper {
     position: static;
-    width: 90%;
+    width: 100%;
+    background-color: #16a08418;
     margin: 0 auto;
-    margin-top: -5%;
   }
 
   .countdown-item:nth-last-child(2) {
@@ -64,7 +64,8 @@ h1 {
 
 .countdown-item {
   position: relative;
-  color: #111;
+  color: #032345;
+  font-weight: 700;
   font-size: 40px;
   display: flex;
   align-items: center;
@@ -79,7 +80,8 @@ h1 {
 }
 
 .countdown-item span {
-  color: #333;
+  color: #032345;
+  font-weight: 700;
   font-size: 12px;
   font-weight: 600;
   text-transform: uppercase;
