--- a/client/src/events/components/EditEventForm.css
+++ b/client/src/events/components/EditEventForm.css
@@ -31,3 +31,20 @@
   color: #16a085;
   font-weight: 500;
 }
+.edit-event__dropdown-category {
+  min-width: 280px;
+}
+.btn-flat {
+  float: left;
+  margin-top: 27px;
+  margin-left: -15px;
+  text-decoration: underline;
+  background-color: transparent;
+  border: 2px solid #fff;
+  border-radius: 15px;
+  transition: all 0.3s;
+  outline: none !important;
+}
+.btn-flat:hover {
+  color: #16a085;
+}
