--- a/client/src/events/components/EditEventForm.css
+++ b/client/src/events/components/EditEventForm.css
@@ -9,7 +9,7 @@
   left: 0px;
   width: 100%;
   text-transform: uppercase;
-  color: #ccc;
+  color: #fff;
   background-color: rgba(0, 0, 0, 0.274);
   transition: all 0.2s ease-in-out;
 }
