--- a/client/src/events/components/EventFeedbacks.css
+++ b/client/src/events/components/EventFeedbacks.css
@@ -1,10 +1,14 @@
+.feedback-title{
+    font-size: 40px;
+    text-align: center;
+}
 .feedback-items{
-    padding: 40px 15px;
+    padding: 20px 15px 40px;
 }
 .leave_feedback-form{
     max-width: 700px;
     position: relative;
-    margin: 0 auto 40px;
+    margin: 40px auto 40px;
 }
 .feedback-item.input{
     opacity: 0.8;
