--- a/client/src/shared/components/UI/Modal.css
+++ b/client/src/shared/components/UI/Modal.css
@@ -1,10 +1,16 @@
 .modal {
   background: rgba(0, 0, 0, 0.7);
-}
-.modal-content {
+  overflow: auto;
 }
 .image-gallery-img {
   min-height: 450px;
   min-width: 600px;
   background-size: cover;
+}
+.modal-button {
+  margin: -1.3rem 0.5rem;
+  font-size: 2.5rem;
+}
+.modal-button:hover {
+  text-shadow: 1px 1px 2px gray;
 }
