added signs of past events

--- a/client/src/events/components/EventItem.css
+++ b/client/src/events/components/EventItem.css
@@ -3,7 +3,21 @@
 .event-item {
   margin: 1.5rem auto;
 }
-
+.container.event-item.past{
+  opacity: 0.6;
+}
+.event-item_title-past{
+  margin: 30px auto 0px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 500;
+}
+.event-item_feedback-link{
+  display: block;
+  margin: 0 auto;
+  font-size: 17px;
+  color: rgba(22, 160, 133, 0.7);
+}
 .event-item__desctiption,
 .event-item__owner,
 .event-item__info {
