--- a/client/src/users/pages/UserProfile.css
+++ b/client/src/users/pages/UserProfile.css
@@ -1,3 +1,8 @@
+.profile-inner{
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px 0px;
+}
 .profile-top {
   display: flex;
   justify-content: space-between;
