--- a/client/src/events/components/EventItem.css
+++ b/client/src/events/components/EventItem.css
@@ -3,16 +3,16 @@
 .event-item {
   margin: 1.5rem auto;
 }
-.container.event-item.past{
+.container.event-item.past {
   opacity: 0.6;
 }
-.event-item_title-past{
+.event-item_title-past {
   margin: 30px auto 0px;
   text-align: center;
   font-size: 30px;
   font-weight: 500;
 }
-.event-item_feedback-link{
+.event-item_feedback-link {
   display: block;
   margin: 0 auto;
   font-size: 17px;
@@ -35,8 +35,14 @@
   line-height: 2rem;
 }
 
-.event-item__info span {
+.event-item__info div span:first-child {
   font-weight: 600;
+}
+.event-item__info div:nth-child(3) span:last-child,
+.event-item__info div:nth-child(4) span:last-child {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #0098ab;
 }
 
 .event-item__img {
@@ -73,7 +79,8 @@
   object-fit: cover;
 }
 .event-item__desctiption {
-  padding: 20px 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .event-item__owner {
   padding: 20px 0px;
@@ -82,11 +89,14 @@
   padding: 20px 0px;
   margin: 10px 0 20px 0;
 }
-@media only screen and (min-width: 1200px) {
+.row__description {
+  margin-top: 5%;
+}
+/* @media only screen and (min-width: 1200px) {
   .row__description {
     margin-top: 5%;
   }
-}
+} */
 
 .img-wrapper {
   height: 100%;
