Improve styling and format for  date and time at the EventResultItem

--- a/client/src/events/pages/EventsResult.css
+++ b/client/src/events/pages/EventsResult.css
@@ -49,16 +49,16 @@
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.past-evnts__top{
+.past-evnts__top {
   margin: 50px auto 35px;
   font-size: 30px;
   font-weight: 500;
   text-align: center;
 }
-.past-event{
+.past-event {
   opacity: 0.6;
 }
-.list__events-item.card.event_slider-item{
+.list__events-item.card.event_slider-item {
   max-width: 320px;
   margin: 0px auto;
 }
@@ -217,16 +217,22 @@
 .list__events-item-creator,
 .list__events-item-location,
 .list__events-item-date,
-.list__events-item-comment{
+.list__events-item-comment {
   padding-left: 20px;
   position: relative;
   margin-right: 30px;
 }
 
+.list__events-item-date {
+  font-weight: 700;
+  color: #0098ab;
+}
+
 .list__events-item-creator::before,
 .list__events-item-location::before,
 .list__events-item-date::before,
-.list__events-item-comment:before{
+.list__events-item-comment:before {
+  color: #000;
   position: absolute;
   font-family: 'icomoon';
   left: 0;
@@ -243,28 +249,28 @@
   content: '\f133';
 }
 
-.list__events-item-comment{
-  margin: 0px  0px 0px auto;
+.list__events-item-comment {
+  margin: 0px 0px 0px auto;
 }
 
-.list__events-item-comment:before{
-  content: "\f086";
+.list__events-item-comment:before {
+  content: '\f086';
 }
-.list__events-item-panel{
+.list__events-item-panel {
   text-align: center;
   margin-top: -15px;
-  padding: 8px 0px 3px;  
+  padding: 8px 0px 3px;
   background-color: rgba(67, 69, 79, 0.05);
 }
-.list__events-item-panel .button-link{
+.list__events-item-panel .button-link {
   width: 50px;
   height: 20px;
   font-size: 20px;
   color: rgb(67, 69, 79);
   margin: 0px 10px;
-  transition: all .2s;
+  transition: all 0.2s;
 }
-.list__events-item-panel .button-link:hover{
+.list__events-item-panel .button-link:hover {
   color: #000;
 }
 .list__events-item-join {
