--- a/client/src/events/components/EventItem.css
+++ b/client/src/events/components/EventItem.css
@@ -23,18 +23,15 @@
 .event-item__info {
   font-family: 'varela round', sans-serif;
 }
-
 .event-item__desctiption h3,
 .event-item__info h3 {
   font-weight: 700;
   color: #16a085;
 }
-
 .event-item__info {
   font-size: 1.2rem;
   line-height: 2rem;
 }
-
 .event-item__info div span:first-child {
   font-weight: 600;
 }
@@ -44,7 +41,6 @@
   font-weight: 600;
   color: #0098ab;
 }
-
 .event-item__img {
   position: relative;
   width: 100%;
@@ -53,15 +49,12 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 .map-container {
   padding: 10px;
 }
-
 .map-container {
   height: 50vh;
 }
-
 .event-item__img figure {
   display: flex;
   align-items: center;
@@ -72,7 +65,6 @@
   margin-inline-end: 0px;
   height: 50vh;
 }
-
 .event-item__img figure img {
   width: 100%;
   height: 100%;
@@ -91,13 +83,9 @@
 }
 .row__description {
   margin-top: 5%;
+  margin-right: 0px;
+  margin-left: 0px;
 }
-/* @media only screen and (min-width: 1200px) {
-  .row__description {
-    margin-top: 5%;
-  }
-} */
-
 .img-wrapper {
   height: 100%;
 }
