Fix some styling and delete comments

--- a/client/src/shared/components/UI/CountDownTimer.css
+++ b/client/src/shared/components/UI/CountDownTimer.css
@@ -123,6 +123,7 @@ h1 {
   -o-transition: all 0.3s;
   transition: all 0.3s;
   border: none;
+  margin-bottom: 10px;
 }
 .link-btn:hover {
   text-decoration: none;
