--- a/client/src/shared/components/UI/CountDownTimer.css
+++ b/client/src/shared/components/UI/CountDownTimer.css
@@ -5,6 +5,7 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   font-weight: 700;
+  width: 100%;
 }
 
 .countdown-wrapper {
@@ -21,6 +22,7 @@ h1 {
 }
 
 .red-wrapper {
+  display: flex;
   background-color: rgba(255, 0, 0, 0.596);
   top: 0;
 }
@@ -99,6 +101,7 @@ h1 {
 
 .link,
 .link:hover {
+  /* display: block; */
   text-decoration: none;
   color: #000;
 }
