--- a/client/src/App.css
+++ b/client/src/App.css
@@ -240,6 +240,9 @@ button:focus{
   .header__calendar-list {
     right: 20%;
   }
+  .list__events-item-location{
+    max-width: 215px;  
+  }
 }
 @media (max-width: 650px) {
   .slider__title {
